# TileEngine

./: CMakeLists.txt  GameBase.cpp  GameBase.hpp  cp1251_to_utf8_replacer.sh  filesystem  fontManager.cpp  fontManager.hpp  main.cpp  textureManager.hpp  vectorMatrix.hpp
base/: AnimatedRect.cpp  AnimatedRect.hpp  Asserts.hpp  cfgSystem.cpp  cfgSystem.hpp  compileTime.hpp  engineBaseTypes.hpp  engineDefines.hpp  fps_counter.cpp  fps_counter.hpp  hashes.hpp  logger.cpp  logger.hpp  timer.hpp  types.hpp
base/allocators/: array_allocator.cpp  array_allocator.hpp
base/io/: keyboard.cpp  keyboard.hpp  mouse.cpp  mouse.hpp
base/io/tests/: keyboard_tests.cpp  keyboard_tests.hpp
base/math/: game_vector.hpp  math.cpp  math.hpp  matrix.hpp
base/new_types/: fixedPoint.hpp  sharedString.cpp  sharedString.hpp
game/collisions/: collisionLine.cpp  collisionLine.hpp  collisionManager.cpp  collisionManager.hpp  collisionPoint.cpp  collisionPoint.hpp  collisionRectangle.cpp  collisionRectangle.hpp
game/map_details/: chunk.cpp  chunk.hpp  chunkArea.cpp  chunkArea.hpp  chunkGenerator.cpp  chunkGenerator.hpp  chunkManager.cpp  chunkManager.hpp  tileManager.cpp  tileManager.hpp
game/objects/: bullet.cpp  bullet.hpp  bulletManager.cpp  bulletManager.hpp  collisionBoxObject.cpp  collisionBoxObject.hpp  physicObject.cpp  physicObject.hpp  prop.cpp  prop.hpp  rectangleObject.cpp  rectangleObject.hpp  updatableObject.cpp  updatableObject.hpp
gamedata/configs/: .system.cnf.swp  system.cnf  tilemap_generator.cnf
gamedata/configs/creatures/: human_anims.cnf
gamedata/configs/gui/styles/: test.json
gamedata/configs/tilemaps/: tilemaps.cnf
gamedata/maps/dummy/: 0_0.chnk
gamedata/maps/test_chunk/: test.chnk_asci
gui/: button.cpp  button.hpp  button_array.cpp  button_array.hpp  component.cpp  component.hpp  context_menu.cpp  context_menu.hpp  cursorIcons.cpp  cursorIcons.hpp  edit.cpp  edit.hpp  keyboardUpdater.cpp  keyboardUpdater.hpp  label.cpp  label.hpp  mouseUpdater.cpp  mouseUpdater.hpp  panel.cpp  panel.h  scrollBar.cpp  scrollBar.hpp  select.cpp  select.hpp  window.cpp  window.hpp
gui/tests/: mouse_tests.cpp  mouse_tests.hpp  panel_tests.cpp  panel_tests.hpp
